--- a/programs/JanNetworks.Rmd
+++ b/programs/JanNetworks.Rmd
@@ -21,6 +21,7 @@ library(edgeR)
 library(tidyverse)
 library(dplyr)
 library(gridExtra)
+library(CorLevelPlot)
 ```
 
 ## Load the data
@@ -101,9 +102,11 @@ table(metadata$location)
 #Solve it by using 1 replicate per tissue (mean of exisitng replicates)
 
 ```
-### Outlier check (??)
+### Outlier check
 
-```{r Outlier}
+Check for outlier genes
+
+```{r OutlierGenes}
 #@@ may not be a good idea to remove genes
 outDetect<-goodSamplesGenes(t(dataNL))
 
@@ -111,8 +114,7 @@ table(outDetect$goodGenes) #False genes are outliers
 table(outDetect$goodSamples) #All samples are True = no outliers
 ```
 
-
-```{r OutlierRemove}
+```{r OutlierGeRemove}
 dataNL<-dataNL[outDetect$goodGenes==TRUE,] #remove ouliers
 ```
 
@@ -136,9 +138,42 @@ d_joint<-sapply(tissue_data, function(tissue_name) rsumer(dataNL, metadata, tiss
 
 repl_data<-as.data.frame(d_joint) #data joint by replicate
 
-colnames(repl_data) = gsub(pattern = "*.data", replacement = "", x = colnames(repl_data)) #get column names to be only location
+colnames(repl_data) = gsub(pattern = "*.data", replacement = "", x = tolower(colnames(repl_data))) #get column names to be only location
 
 rownames(repl_data)<-rownames(dataNL) #rename rows to be genes again
+
+```
+
+Create replicate metadata
+```{r replMeta}
+repl_meta<-as.data.frame(colnames(repl_data))
+colnames(repl_meta)<-c("location")
+```
+
+# Data diagnostic
+
+## Plot the raw data
+
+```{r rawPlot}
+
+multiColPlot<-function(data, location){
+  ggplot(data, aes(x=location))+geom_histogram()
+}
+
+ggplot(repl_data, aes(x=cob))+geom_histogram()
+
+
+ggplot(t(repl_data), aes(x=Zm00001eb000010))+geom_histogram()+
+  facet_wrap(~repl_meta$location)
+
+```
+
+
+```{r} TMMedger
+ggplot(dataNL, aes())
+hist(dataNL$B73_19_1)
+a<-as.data.frame(Nrepl_data)
+hist(a$cob)
 ```
 
 ## Normalization
@@ -146,23 +181,27 @@ rownames(repl_data)<-rownames(dataNL) #rename rows to be genes again
 We can't use VST methods as we have 1 replicate of each type, it would be unreliable, we can use CPM or TMM
 
 ```{r CPMnorm}
-#@@ dcide norm method
 #uses edgeR
 dge <- DGEList(repl_data)
 
-# Calculate normalization factors
-dge <- calcNormFactors(dge, method = "TMM")
+#Calculate normalization factors
+dge <- calcNormFactors(dge)
 
-# Get normalized counts
-Nrepl_data <- cpm(dge)
+#Get normalized counts
+Nrepl_data <- cpm(dge, log=TRUE)
+
+#Nrepl to data frame
+Nrepl_data<-as.data.frame(Nrepl_data) #evetually transpose
+
 ```
 
-```{r TMMnorm}
-lib_sizes <- colSums(repl_data)
+## PLotting the nodrmalized data counts
 
-# Calculate CPM
-Nrepl_data <- (t(repl_data) / lib_sizes) * 1e6 #1e6 converts to a per million units, its more readable
+```{r}
+hist(Nrepl_data$cob)
+ggplot(Nrepl_data, aes(x=cob))+geom_density()
 ```
+
 
 # Network construction
 
@@ -173,15 +212,16 @@ Get list of powers and do the calculations
 ```{r nwPowerList}
 power<-c(c(1:15), seq(17, 50, by=2))
 
-#Network topology anaisis
+#Network topology analysis
 sft <- pickSoftThreshold(Nrepl_data,
                   powerVector = power,
                   networkType = "signed",
                   verbose = 5)
 
 ```
+
 Plot and choose the best possible outcome
-```{r nwPowerPLot}
+```{r nwPowerPLot, purl=FALSE}
 sftIn<-sft$fitIndices
 
 p1<-ggplot(sftIn, aes(Power, SFT.R.sq, label = Power)) +
@@ -198,24 +238,149 @@ p2<-ggplot(sftIn, aes(Power, mean.k., label = Power)) +
   theme_classic()
 
 grid.arrange(p1, p2, nrow=2)
-
-#Use automatic calculation
-softPower <- sft$powerEstimate
 ```
 
-## Blcok building
+```{r nwPowerChoose}
+#Use automatic calculation
+softPw <- sft$powerEstimate
+```
 
-```{r}
-bwnet <- blockwiseModules(Nrepl_data,
+## Block building
+
+```{r nwConstr}
+temp_cor <- cor
+cor <- WGCNA::cor
+
+ModNetwork <- blockwiseModules(Nrepl_data,
                  nThreads = 32,
                  maxBlockSize = 64000, #Memory dedicated to process (blocksize is 14000 with 16GB ram) (if Ngenes>maxBlocksize then Ngenes will be split into blocks to fit mBs)
                  deepSplit = 2,
                  TOMType = "signed", #unsigned?
-                 power = softPower,
+                 power = softPw,
                  mergeCutHeight = 0.25,
                  numericLabels = FALSE,
                  randomSeed = 42,
-                 #minModuleSize=30, #given by helpers
                  verbose = 4)
+
+cor<-temp_cor
+```
+
+# Modules and eigengenes
+
+Eigengenes sumarize gene expression for a module(cluster of highly co-expressed genes(detected by similar gene expression patterns)) using PC1.
+Group up genes into 1 value
+```{r EigenColors}
+module_eigengenes <- ModNetwork$MEs
+
+#get number of genes for each module
+table(ModNetwork$colors)
+
+#Plot the dendrogram and the module colors before and after merging underneath
+plotDendroAndColors(ModNetwork$dendrograms[[1]], cbind(ModNetwork$unmergedColors, ModNetwork$colors),
+                    c("unmerged", "merged"),
+                    dendroLabels = FALSE,
+                    addGuide = TRUE,
+                    hang= 0.03,
+                    guideHang = 0.05)
+```
+
+## Relate modules to traits
+
+### Binarize metadata
+
+Binarize the location
+
+```{r binMeta}
+levels(as.factor(repl_meta$location))
+
+bin_metadata <- data.frame(
+  loc_cob=as.integer(repl_meta$location=="cob"),
+  loc_coleoptile=as.integer(repl_meta$location=="coleoptile"),
+  loc_crown_root=as.integer(repl_meta$location=="crown.root"),
+  loc_first_elongated_internode=as.integer(repl_meta$location=="first.elongated.internode"),
+  loc_flag_leaf=as.integer(repl_meta$location=="flag.leaf"),
+  loc_immature_cob=as.integer(repl_meta$location=="immature.cob"),
+  loc_immature_tassel=as.integer(repl_meta$location=="immature.tassel"),
+  loc_leaf_1=as.integer(repl_meta$location=="leaf.1"),
+  loc_leaf_3_blade=as.integer(repl_meta$location=="leaf.3.blade"),
+  loc_leaf_3_sheath=as.integer(repl_meta$location=="leaf.3.sheath"),
+  loc_leaf_5=as.integer(repl_meta$location=="leaf.5"),
+  loc_leaf_5_elongation_zone=as.integer(repl_meta$location=="leaf.5.elongation.zone"),
+  loc_leaf_5_mature=as.integer(repl_meta$location=="leaf.5.mature"),
+  loc_leaf_5_meristem=as.integer(repl_meta$location=="leaf.5.meristem"),
+  loc_leaf_8=as.integer(repl_meta$location=="leaf.8"),
+  loc_mature_seed_40_dap=as.integer(repl_meta$location=="mature.seed.40.dap"),
+  loc_meotic_tassel=as.integer(repl_meta$location=="meotic.tassel"),
+  loc_mesophyll=as.integer(repl_meta$location=="mesophyll"),
+  loc_prepollinated_cob=as.integer(repl_meta$location=="prepollinated.cob"),
+  loc_primary_root=as.integer(repl_meta$location=="primary.root"),
+  loc_primary_root_elongation_zone=as.integer(repl_meta$location=="primary.root.elongation.zone"),
+  loc_primary_root_meristematic_zone=as.integer(repl_meta$location=="primary.root.meristematic.zone"),
+  loc_root_hair_zone=as.integer(repl_meta$location=="root.hair.zone"),
+  loc_seed_10_dap=as.integer(repl_meta$location=="seed.10.dap"),
+  loc_seed_15_dap=as.integer(repl_meta$location=="seed.15.dap"),
+  loc_seed_20_dap=as.integer(repl_meta$location=="seed.20.dap"),
+  loc_seed_25_dap=as.integer(repl_meta$location=="seed.25.dap"),
+  loc_seed_30_dap=as.integer(repl_meta$location=="seed.30.dap"),
+  loc_seminal_root=as.integer(repl_meta$location=="seminal.root"),
+  loc_silk=as.integer(repl_meta$location=="silk")
+)
+
+rownames(bin_metadata)<-rownames(Nrepl_data)
+
+```
+
+### Correlation
+
+```{r corCalc}
+nTissues <- nrow(Nrepl_data)
+nGenes <- ncol(Nrepl_data)
+
+MT_cor<-cor(module_eigengenes, bin_metadata, use="p")
+module.trait.corr.pvals <- corPvalueStudent(MT_cor, nTissues)
+
+```
+
+# Coexpression visualization
+
+```{r visCoexp}
+heatmap.data <- merge(module_eigengenes, bin_metadata, by = 'row.names')
+
+head(heatmap.data)
+
+rownames(heatmap.data)<-heatmap.data$Row.names
+heatmap.data$Row.names<-NULL
+
+head(heatmap.data)
+
+png(paste0("./CorPlots/", specie, "_corplot.png"))
+CorLevelPlot(heatmap.data,
+             x = names(bin_metadata),
+             y = names(module_eigengenes),
+             titleX= "Modules", titleY = "Traits",
+             rotLabX = 45, rotTitleY = 90,
+             cexCorval = 0.7, cexLabY = 0.7, cexLabX = 0.7
+            )
+dev.off()
+
+```
+
+```{r corTable, eval=FALSE, purl=FALSE}
+textMatrix = paste(signif(MT_cor, 2), "\n(",
+signif(module.trait.corr.pvals, 1), ")", sep = "");
+dim(textMatrix) = dim(MT_cor)
+par(mar = c(6, 8.5, 3, 3));
+
+labeledHeatmap(Matrix = MT_cor,
+xLabels = names(bin_metadata),
+yLabels = names(module_eigengenes),
+ySymbols = names(module_eigengenes),
+colorLabels = FALSE,
+colors = greenWhiteRed(50),
+textMatrix = textMatrix,
+setStdMargins = FALSE,
+cex.text = 0.5,
+zlim = c(-1,1),
+main = paste("Module-trait relationships"))
 ```
 
