--- a/programs/JanNetworks.Rmd
+++ b/programs/JanNetworks.Rmd
@@ -7,6 +7,7 @@ output: pdf_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(purl = TRUE)
 ```
 
 # Loading
@@ -21,6 +22,7 @@ library(edgeR)
 library(tidyverse)
 library(dplyr)
 library(gridExtra)
+#devtools::install_github("kevinblighe/CorLevelPlot")
 library(CorLevelPlot)
 library(ggpubr)
 ```
@@ -30,8 +32,12 @@ library(ggpubr)
 Import the csv and metadata files
 
 ```{r dtLoad}
-dataNL<-read.delim("../data/nolen/B73.csv", row.names=1, stringsAsFactors=TRUE)
-metadata<-read.delim("../data/nolen/B73_m.txt", header=T, row.names=1, stringsAsFactors=TRUE)
+specie<-"B73"
+dataPath<-paste0("../data/wlen/", specie, ".csv")
+metadataPath<-paste0("../data/wlen/", specie, "_m.txt")
+
+dataNL<-read.delim(dataPath, row.names=1, stringsAsFactors=TRUE)
+metadata<-read.delim(metadataPath, header=T, row.names=1, stringsAsFactors=TRUE)
 #dataNL<-read.delim("../data/data_nolen.csv", row.names=1, stringsAsFactors=TRUE)
 #metadata<-read.delim("../data/metadata.txt", header=T, row.names=1, stringsAsFactors=TRUE)
 
@@ -39,6 +45,16 @@ colnames(metadata)<-c("specie", "quality", "tissue_abv", "rep", "location")
 ```
 
 # Data preparation
+
+## Get lengths vector
+
+```{r getLen}
+if ("Length" %in% colnames(dataNL)){
+  length_vec<-dataNL$Length
+}
+```
+
+
 
 ## Fix the data
 
@@ -117,6 +133,11 @@ table(outDetect$goodSamples) #All samples are True = no outliers
 
 ```{r OutlierGeRemove}
 dataNL<-dataNL[outDetect$goodGenes==TRUE,] #remove ouliers
+
+if (exists("length_vec")){ #only if it exists
+  length_vec<-length_vec[outDetect$goodGenes==TRUE] #if length_vec exists remove outliers from there as well
+}
+
 ```
 
 ## Replicate joining
@@ -159,7 +180,8 @@ Create the plot functions and plot information
 ```{r rawPlotPrep}
 multiColHist<-function(data, location, color_var){ #gets the data table, the concrete column(tissue) and the color for the tissue
   loc_var<-data[[location]] #get the tissue data
-  p<-ggplot(data, aes(x=loc_var))+geom_histogram(bins = 30, fill=color_var, color="black")+
+  p<-ggplot(data, aes(x=loc_var))+
+    geom_histogram(bins = 30, fill=color_var, color="black")+
     xlab("")+ylab("")+theme_minimal() #plot a colored histogram for all genes of X tissue
   return(p)
 }
@@ -181,7 +203,7 @@ legend_var<-get_legend(legend_plot) #place the legend into a variable
 ```
 
 Create the plot list
-```{r rawPlot}
+```{r rawPlotListing}
 RawHistList<-list() #to store the plots
 
 for (i in 1:nrow(repl_meta)){
@@ -197,20 +219,16 @@ Joins the plot and legend to create a plot of the total raw data distribution
 ```{r rawPlot}
 raw_Ptab<-arrangeGrob(grobs=RawHistList, ncol=nrow(repl_meta)/6) #creates a table that organizes the plots
 
-grid.arrange(raw_Ptab, legend_var, widths = c(10, 2.3), ncol=2) #plots the plot list and legend together
-```
-
-
-```{r} TMMedger
-ggplot(dataNL, aes())
-hist(dataNL$B73_19_1)
-a<-as.data.frame(Nrepl_data)
-hist(a$cob)
+png(paste0("./DistrPlots/", specie, "_raw_distPlot.png"), width=1600, height=800) #B73_CPM_raw_distPlot
+grid.arrange(raw_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top="Raw data distribution") #plots the plot list and legend together
+dev.off()
 ```
 
 ## Normalization
 
-We can't use VST methods as we have 1 replicate of each type, it would be unreliable, we will use cpm
+We can't use VST methods as we have 1 replicate of each type, it would be unreliable, we will use cpm and rpkm
+
+### CPM
 
 ```{r CPMnorm}
 #uses edgeR
@@ -225,12 +243,15 @@ Nrepl_data <- cpm(dge, log=TRUE) #rpkm with lengths, testo other normalizations 
 #Nrepl to data frame
 Nrepl_data<-as.data.frame(Nrepl_data) #evetually transpose
 
+NormType<-"CPM"
+
 ```
 
-## Plotting the normalized data counts
+#### Plot CPM normalized data
 
 Create a function to plot the data
 ```{r normPLotFunc}
+#@@ analyze CPM and RPKN and choose 1
 multiColLine<-function(data, location, color_var){ #gets the data table, the concrete column(tissue) and the color for the tissue
   loc_var<-data[[location]] #get the tissue data
   p<-ggplot(data, aes(x=loc_var))+geom_density(fill=color_var, color="black")+
@@ -240,24 +261,78 @@ multiColLine<-function(data, location, color_var){ #gets the data table, the con
 ```
 
 Create the plot list
-```{r normPlot}
+```{r CPMnormPlotListing}
+
 NormHistList<-list() #to store the plots
 
 for (i in 1:nrow(repl_meta)){
   color_var<-colorList[i]
   loc<-colnames(repl_data)[i]
   
-  temp_plot<-multiColLine(Nrepl_data, loc, color_var)
+  temp_plot<-multiColHist(Nrepl_data, loc, color_var)
   NormHistList[[i]]<-temp_plot
 } #iterates over each tissue, creates a plot with a distinct color for it and stores it in a list
 ```
 
 Joins the plot and legend to create a plot of the total normalized data distribution
-```{r normPlot}
+```{r CPMnormPlot}
+plotTitle<-paste0("Normalized data distribution using ", NormType)
+
 norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=nrow(repl_meta)/6) #creates a table that organizes the plots
 
-grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2) #plots the plot list and legend together
+png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
+grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=plotTitle) #plots the plot list and legend together
+dev.off()
 ```
+
+
+### RPKM
+
+Only if we have the gene lengths
+```{r RPKMnorm}
+if (exists("length_vec")){ #if we have lengths
+ length_vec<-data.frame(Length=length_vec) #convert to dataframe
+
+  dge <- DGEList(repl_data,genes=length_vec) #use edgeR for normalization
+
+  dge <- calcNormFactors(dge)
+
+  Nrepl_data <- rpkm(dge, log=TRUE)
+
+  Nrepl_data<-as.data.frame(Nrepl_data)
+  
+  NormType<-"RPKM"
+}
+```
+
+
+#### Plot RPKM normalized data
+
+Create the plot list
+```{r RPKMnormPlotListing}
+## Plotting the normalized data counts <-allPLot Title
+NormHistList<-list() #to store the plots
+
+for (i in 1:nrow(repl_meta)){
+  color_var<-colorList[i]
+  loc<-colnames(repl_data)[i]
+  
+  temp_plot<-multiColHist(Nrepl_data, loc, color_var)
+  NormHistList[[i]]<-temp_plot
+} #iterates over each tissue, creates a plot with a distinct color for it and stores it in a list
+```
+
+Joins the plot and legend to create a plot of the total normalized data distribution
+```{r RPKMnormPlot}
+plotTitle<-paste0("Normalized data distribution using ", NormType)
+
+norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=nrow(repl_meta)/6) #creates a table that organizes the plots
+
+png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
+grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=plotTitle) #plots the plot list and legend together
+dev.off()
+```
+
 
 # Network construction
 
@@ -266,6 +341,8 @@ grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2) #plots the plot
 
 Get list of powers and do the calculations
 ```{r nwPowerList}
+Nrepl_data<-t(Nrepl_data)
+
 power<-c(c(1:15), seq(17, 50, by=2))
 
 #Network topology analysis
@@ -308,7 +385,7 @@ temp_cor <- cor
 cor <- WGCNA::cor
 
 ModNetwork <- blockwiseModules(Nrepl_data,
-                 nThreads = 32,
+                 nThreads = 16, #32
                  maxBlockSize = 64000, #Memory dedicated to process (blocksize is 14000 with 16GB ram) (if Ngenes>maxBlocksize then Ngenes will be split into blocks to fit mBs)
                  deepSplit = 2,
                  TOMType = "signed", #unsigned?
@@ -409,11 +486,12 @@ heatmap.data$Row.names<-NULL
 
 head(heatmap.data)
 
-png(paste0("./CorPlots/", specie, "_corplot.png"))
+plotTitle<-paste0("Correlation plot of ", specie, " using ", NormType)
+png(paste0("./CorPlots/", specie, "_", NormType, "_corplot.png"), width=1600, height=800) #B73_CPM_corplot
 CorLevelPlot(heatmap.data,
              x = names(bin_metadata),
              y = names(module_eigengenes),
-             titleX= "Modules", titleY = "Traits",
+             titleX="Modules", titleY="Traits", main=plotTitle,
              rotLabX = 45, rotTitleY = 90,
              cexCorval = 0.7, cexLabY = 0.7, cexLabX = 0.7
             )
