--- a/programs/JanNetworks.Rmd
+++ b/programs/JanNetworks.Rmd
@@ -33,7 +33,7 @@ Import the csv and metadata files
 
 ```{r dtLoad}
 #"B73"   "DK105" "EP1"   "F7"    "PE75" 
-specie<-"B73"
+specie<-"PE75"
 dataPath<-paste0("../data/wlen/", specie, ".csv")
 metadataPath<-paste0("../data/wlen/", specie, "_m.txt")
 
@@ -370,9 +370,9 @@ plotTitle<-paste0(specie, " normalized data distribution using ", NormType)
 
 norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta)/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
+png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
 grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=plotTitle) #plots the plot list and legend together
-#dev.off()
+dev.off()
 ```
 
 ### BetterFilter RPKM
@@ -427,7 +427,8 @@ Get list of powers and do the calculations
 ```{r nwPowerList}
 Nrepl_data<-t(Nrepl_data)
 
-power <- c(c(1:15), seq(from = 16, to = 50, by = 2))
+power <- c(c(1:15), seq(from = 17, to = 50, by = 2))
+#power<-c(1:40)
 
 #Network topology analysis
 sft <- pickSoftThreshold(Nrepl_data,
@@ -458,6 +459,7 @@ grid.arrange(p1, p2, nrow=2)
 ```
 
 ```{r nwPowerChoose}
+print(sft$powerEstimate)
 #Use automatic calculation
 if (is.na(sft$powerEstimate)){
   softPw<-30 #if the soft power is NA, set to 30, else take smallest possible
@@ -465,7 +467,12 @@ if (is.na(sft$powerEstimate)){
   softPw <- min(sft$powerEstimate, 30)
   }
 
-#softPw<-sft$powerEstimate
+if (specie=="DK105"){
+  softPw<-24 #4000
+  #softPw<-26 #6000
+  #softPw<-30 #8000
+}
+
 ```
 
 ## Block building
@@ -476,15 +483,18 @@ cor <- WGCNA::cor
 
 ModNetwork <- blockwiseModules(Nrepl_data,
                  nThreads = 32, #16
-                 maxBlockSize = 64000, #Memory dedicated to process (blocksize is 14000 with 16GB ram) (if Ngenes>maxBlocksize then Ngenes will be split into blocks to fit mBs)
+                 maxBlockSize = 64000, #directly related to memory, if maxBlockSize<total genes, multiple blocks will have to be used -> worse clustering
                  deepSplit = 4,
                  TOMType = "signed", #unsigned?
                  power = softPw,
-                 mergeCutHeight = 0.3,
+                 mergeCutHeight = 0.3,#0.3->4799#0.8->4799(low module granularity) #0.1->4799(high granularity(lots of colors))
                  minModuleSize = 20,
                  numericLabels = FALSE,
+                 pamRespectsDendro = FALSE,
+                 minKMEtoStay = 0.3,#0.3->4799 #0.8->7781 #<0.3 stays the same
                  randomSeed = 42,
                  verbose = 4)
+
 
 cor<-temp_cor
 ```
@@ -499,6 +509,32 @@ module_eigengenes <- ModNetwork$MEs
 
 #get number of genes for each module
 table(ModNetwork$colors)
+
+#B73 
+#cpm 1917/22205 pw:19
+#rpkm 2068/24537 pw:19
+#rpkm_filtered 1107/25296 pw:17
+
+#DK105 pw:24 #@@recheck powers
+#cpm 4364/22386
+#rpkm 4823/25044
+#rpkm_filtered 4799/25795
+
+#EP1 
+#cpm 3167/22377 pw:21
+#rpkm 2550/25139 pw:19
+#rpkm_filtered 3456/25994 pw:21
+
+#F7 
+#cpm 4329/22592 pw:25
+#rpkm 3828/25214 pw:23
+#rpkm_filtered 3770/25786 pw:23
+
+#PE75
+#cpm
+
+
+
 ```
 
 
